Backported changes to `1.16.5` branch